Center the error message for non-existent profiles. (#452)

--- a/gobotany/plantshare/templates/_find_people_profile.html
+++ b/gobotany/plantshare/templates/_find_people_profile.html
@@ -30,7 +30,7 @@
                 <p>Groups: {{ profile.groups }}</p>
             {% endif %}
         {% else %}
-            <p>Profile not found</p>
+            <p class="not-found">Profile not found</p>
         {% endif %}
     </div>
 {% endblock %}
