--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -305,6 +305,10 @@ body.plantshare {
             height: 113px;
             width: $avatar-image-width;
         }
+        .not-found {
+            padding: 70px 0;
+            text-align: center;
+        }
     }
 
     &#sign-up #main {
