Rename the data field for profile details visibility. (#452)

--- a/gobotany/plantshare/templates/your_profile.html
+++ b/gobotany/plantshare/templates/your_profile.html
@@ -39,10 +39,10 @@
                           </div>
                           <div class="edit">
                               <div class="ajax-field">
-                                  {{ profile_form.sharing_visibility }}
+                                  {{ profile_form.details_visibility }}
                               </div>
                               <div class="field-controls">
-                                <input type="button" class="field-save save-btn" value="Save" />
+                                <input type="button" class="field-save save-btn" value="Save">
                                 <a href="#" class="field-reset">Cancel</a>
                               </div>
                           </div>
@@ -59,7 +59,7 @@
                                   {{ profile_form.display_name }}
                               </div>
                               <div class="field-controls">
-                                <input type="button" class="field-save save-btn" value="Save" />
+                                <input type="button" class="field-save save-btn" value="Save">
                                 <a href="#" class="field-reset">Cancel</a>
                               </div>
                           </div>
@@ -76,7 +76,7 @@
                                   {{ profile_form.saying }}
                               </div>
                               <div class="field-controls">
-                                <input type="button" class="field-save save-btn" value="Save" />
+                                <input type="button" class="field-save save-btn" value="Save">
                                 <a href="#" class="field-reset">Cancel</a>
                               </div>
                           </div>
@@ -121,7 +121,7 @@
                                   {{ profile_form.location_visibility }}
                               </div>
                               <div class="field-controls">
-                                <input type="button" class="field-save save-btn" value="Save" />
+                                <input type="button" class="field-save save-btn" value="Save">
                                 <a href="#" class="field-reset">Cancel</a>
                               </div>
                           </div>
@@ -138,7 +138,7 @@
                                   {{ profile_form.location }}
                               </div>
                               <div class="field-controls">
-                                <input type="button" class="field-save save-btn" value="Save" />
+                                <input type="button" class="field-save save-btn" value="Save">
                                 <a href="#" class="field-reset">Cancel</a>
                               </div>
                           </div>
